TestSuite/errors/err0426.pas
{$define asd}
{$ifdef asd}
{$resource 'НеСуществующийФайл'}
{$endif asd}
begin
  
end.